* fix styling on applicant form, especially on mobile

--- a/dapp/src/assets/scss/_style.scss
+++ b/dapp/src/assets/scss/_style.scss
@@ -185,6 +185,10 @@ header {
   max-width: 10rem;
   padding: 0 0.5rem;
   text-align: center;
+
+  @media screen and (max-width: 768px) {
+    max-width: 100%;
+  }
 }
 
 .text-input:focus,
@@ -194,9 +198,9 @@ header {
 }
 
 .text-input.readonly {
-  background-color: rgba(255, 255, 255, 0.025);
+  background-color: rgba(255, 255, 255, 0.03);
   color: rgba(255, 255, 255, 0.8);
-  border-bottom: 0;
+  border-color: rgba(255, 255, 255, 0.03);
 }
 
 .text-operator {
@@ -205,6 +209,14 @@ header {
   margin: 0 1rem;
   top: -0.4rem;
   position: relative;
+
+  @media screen and (max-width: 768px) {
+    display: block;
+    margin: 0 auto;
+    top: -1.4rem;
+    text-align: center;
+    width: 1.5rem;
+  }
 }
 
 .entries {
@@ -254,6 +266,14 @@ header {
 
 .multistep-form--step-container {
   margin: 0 auto 2rem;
+}
+
+.multistep-form--step-child {
+  margin: 1rem 2rem;
+
+  @media screen and (max-width: 768px) {
+    margin: 1rem;
+  }
 }
 
 .section {
